# MooshieUI

./: .dockerignore  .env.example  .gitignore  .rooignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  PR_AUTOBODY.md  PR_AUTOBODY_2.md  PR_BODY.md  PR_BODY.txt  PR_BODY_3.md  PR_BODY_FINAL.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_PLACEHOLDER.md  RELEASE_PR_BODY.md  cargo_check.txt  docker-compose.yml  docker-entrypoint.sh  index.html  package-lock.json  package.json  pnpm-lock.yaml  screenshot.avif
.claude/: settings.json
.githooks/: pre-commit
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
.github/agents/: pre-commit-check.agent.md  release-and-precommit.agent.md
.github/instructions/: mooshieui.instructions.md
.github/prompts/: push.prompt.md  release.prompt.md
.github/workflows/: glassworm-scan.yml  pr-unicode-annotate.yml  release.yml
.roo/commands/: add-generation-param.md  add-tauri-command.md  push.md  release.md
.roo/rules-architect/: AGENTS.md
.roo/rules-ask/: AGENTS.md
.roo/rules-code/: AGENTS.md
.roo/rules-debug/: AGENTS.md
comfyui-nodes/: install.sh  nodes_guidance.py  nodes_sdxl_flux2vae.py  nodes_sdxl_flux2vae_combined.py  sdxl_flux2vae_init.py
comfyui-nodes/nanosaur_support/: model.py  nodes.py  text_encoder.py  vae.py
docs/: BOT_REVIEW_TRIAGE.md  FEATURE_RESEARCH.md  README.md
docs/superpowers/plans/: 2026-05-23-mobile-generate-parity.md
docs/superpowers/specs/: 2026-05-23-mobile-generate-parity-design.md
k8s/: configmap.yaml  deployment.yaml  namespace-pvc.yaml  secret.yaml
scripts/: apply-external-comfy-i18n.mjs  apply-i18n-gaps.mjs  artist-gallery-locales-extra.json  compute_nanosaur_rgb_factors.py  diff-artist-keys.mjs  extract-artist-keys.mjs  generate-artist-gallery-i18n.mjs  i18n-artist-gallery-all.json  i18n-civitai-queue-translations.json  i18n-external-comfy.json  i18n-gap-en-de.json  i18n-gap-keys.json  i18n-gap-translations.json  i18n-notif-misc.json  i18n-restart-required.json  i18n-sweep-keys.txt  merge_anima_tags.py  precommit_locale_check.py  r2_build_indices.py  r2_upload_anima.py  setup-branch-protection.sh  setup-hooks.sh
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: auth.rs  config.rs  gallery_index.rs  interrogator.rs  jxl.rs  lib.rs  log_buffer.rs  main.rs  metadata.rs  model_requests.rs  notifications.rs  server_main.rs  setup.rs  state.rs  temp_images.rs  user_prefs.rs  webserver.rs
src-tauri/src/comfyui/: client.rs  gpu_manager.rs  mod.rs  mooshie_nodes.py  nodes.rs  process.rs  types.rs  websocket.rs
src-tauri/src/commands/: api.rs  config.rs  interrogator.rs  mod.rs  server.rs  websocket.rs  workflow.rs
src-tauri/src/templates/: controlnet.rs  facefix.rs  img2img.rs  inpainting.rs  mod.rs  txt2img.rs  upscale.rs
src/lib/animadex/: characterInsert.ts  client.ts  fetch.ts  index.ts  types.ts
src/lib/animadex/components/: CharacterExplorer.svelte  CharacterInsertModal.svelte  CharacterLightbox.svelte
src/lib/artist-gallery/: README.md  client.ts  counts.ts  detection.ts  favourites.svelte.ts  imageCache.ts  index.ts  store.svelte.ts  types.ts
src/lib/artist-gallery/components/: ArtistCard.svelte  ArtistGalleryPage.svelte  ArtistHoverPreview.svelte  ArtistLightbox.svelte  FavouritesManager.svelte
src/lib/components/: ExternalComfyModal.svelte
src/lib/components/canvas/: CanvasEditor.svelte
src/lib/components/downloads/: DownloadBanner.svelte
src/lib/components/gallery/: GalleryPage.svelte
src/lib/config/: controlnet-presets.ts
src/lib/locales/: de.ts  en.ts  es.ts  fr.ts  it.ts  ja.ts  ko.ts  pt.ts  ru.ts  zh-tw.ts  zh.ts
src/lib/stores/: accessibility.svelte.ts  artistInsert.svelte.ts  autocomplete.svelte.ts  characterInsert.svelte.ts  compare.svelte.ts  connection.svelte.ts  downloads.svelte.ts  gallery.svelte.ts  generation.svelte.ts  locale.svelte.ts  modelRequests.svelte.ts  models.svelte.ts  notifications.svelte.ts  prefsSync.svelte.ts  progress.svelte.ts  promptPresets.svelte.ts  styles.svelte.ts
src/lib/types/: index.ts
src/lib/utils/: api.ts  cdnFetch.ts  comfyStartup.ts  device.ts  galleryActions.ts  ipc.ts  lazyThumbnail.ts  localeFormat.ts  log-buffer.ts  metadataImport.ts  modelFamily.ts  notificationI18n.ts  pngMetadata.ts  promptSchedule.ts  scrollCapture.ts  serverPrefs.ts  smoothScroll.ts  syncTrigger.ts  theme.ts
(+49 files in other folders)
