[package]
name = "comfyui-desktop"
version = "0.5.9"
edition = "2021"
license = "MIT"

[lib]
name = "comfyui_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
url = "2"
percent-encoding = "2"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
rand = "0.10"
base64 = "0.22"
dirs = "6"
sha2 = "0.10"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
png = "0.18"
flate2 = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "tracing", "tls-native", "api-24", "load-dynamic"] }
csv = "1"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "=2.0.2"
tar = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
zip = "4"
