[package]
name = "comfyui-desktop"
version = "1.1.9"
edition = "2021"
license = "AGPL-3.0-or-later"
default-run = "comfyui-desktop"

[lib]
name = "comfyui_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "mooshieui-server"
path = "src/server_main.rs"
required-features = ["server"]

[features]
default = ["desktop"]
desktop = [
    "dep:tauri",
    "dep:tauri-build",
    "dep:tauri-plugin-store",
    "dep:tauri-plugin-shell",
    "dep:tauri-plugin-dialog",
    "dep:tauri-plugin-fs",
    "dep:tauri-plugin-clipboard-manager",
    "dep:tauri-plugin-updater",
    "dep:tauri-plugin-process",
    "dep:webkit2gtk",
    "dep:ort",
    "dep:csv",
]
server = ["dep:ort", "dep:csv"]

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[dependencies]
tauri = { version = "2", features = ["image-png"], optional = true }
tauri-plugin-store = { version = "2", optional = true }
tauri-plugin-shell = { version = "2", optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tauri-plugin-fs = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
url = "2"
percent-encoding = "2"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
rand = "0.10"
base64 = "0.22"
dirs = "6"
sha2 = "0.10"
argon2 = { version = "0.5", features = ["std"] }
tauri-plugin-clipboard-manager = { version = "2", optional = true }
tauri-plugin-updater = { version = "2", optional = true }
tauri-plugin-process = { version = "2", optional = true }
png = "0.18"
flate2 = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
jxl-oxide = { version = "0.12", default-features = false }
jxl-encoder = { version = "0.3", default-features = false, features = ["std", "unsafe-performance"] }
rusqlite = { version = "0.32", features = ["bundled"] }
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "tracing", "tls-native", "api-24", "load-dynamic"], optional = true }
csv = { version = "1", optional = true }
axum = { version = "0.8", features = ["tokio"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
mime_guess = "2"
tokio-stream = { version = "0.1", features = ["sync"] }
open = "5"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
rust-embed = { version = "8", features = ["interpolate-folder-path"] }

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = { version = "=2.0.2", optional = true }
tar = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
zip = "4"
